# pypi-download-pkg

./: README.md  azure-pipelines.yml  pyproject.toml
pypi_download_pkg/: cli.py
tests/: test_cli.py
tests/test_data/: requirements.txt
