[project]
name = "pypi-download-pkg"
version = "0.2.2"
description = ""
authors = []
dependencies = [
    "requests >=2.31.0,<3",
]
requires-python = "~=3.10"

[project.scripts]
download_linux_pkg = "pypi_download_pkg.cli:cli"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.uv]
native-tls = true
keyring-provider = "subprocess"

[[tool.uv.index]]
name = "BMSAzureDevOps"
url = "https://VssSessionToken@pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/simple/"
explicit = true
publish-url = "https://pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/upload/"

[tool.hatch.build.targets.wheel]
packages = [
    "pypi_download_pkg",
]

[dependency-groups]
test = [
    "pytest >=7.3.1,<8",
]
dev = [
    "pyright >=1.1.307,<2",
]
